--- a/bibliography.tex
+++ b/bibliography.tex
@@ -10,5 +10,32 @@
 % Add if doc can be made public in docdb -- AH 
 % \bibitem{montanari_35ton_perf} Performance And Results of the LBNE 35 ton Membrane Cryostat Prototype
 % \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25–ICMC 2014, LBNE Docid 9270} 
- 
+
+\bibitem{ICARUS1} "Design, construction and tests of the ICARUS T600 detector", ICARUS Collaboration, Nucl. Inst. Meth., A527 (2004) 329-410. 
+
+\bibitem{ICARUS2} "Performance of a liquid argon time projection chamber exposed to the CERN West Area Neutrino Facility neutrino beam", F. Arneodo et al. (ICARUS-Milano Collaboration) - Physical Review D (2006) (Vol. 74, No. 112001). 
+
+\bibitem{argoneut1} ``First Measurements of Inclusive Muon Neutrino Charged Current Differential Cross Sections on Argon." C. Anderson et al, Physical Review Letters (PRL) 108 (2012), 161802. 
+\bibitem{argoneut2} "The ArgoNeuT Detector in the NuMI Low-Energy beam line at Fermilab" C. Anderson et al, Journal of Instrumentation (JINST), 2012 JINST Vol. 7 P10019. 
+
+\bibitem{fluka05} "FLUKA: a multi-particle transport code" A. Ferrari, P.R. Sala, A. Fasso`, and J. Ranft, CERN-2005-10 (2005), INFN/TC\_05/11, SLAC-R-773.
+
+\bibitem{icarus_reco}
+%spatial and calorimetric reconstruction algorithm is also published:
+``Precise 3D track reconstruction algorithm for the ICARUS T600 liquid argon time projection chamber detector'', ICARUS Collaboration, 
+Adv.High Energy Phys., vol. 2013, p. 260820, 2013
+
+\bibitem{nn_pid} based on
+``Neural Network Parameterizations of Electromagnetic Nucleon Form Factors'', K. M. Graczyk, P. Plonski, R. Sulej, JHEP Vol. 2010, No 9, pp.1-30 (2010).
+\bibitem{rd_pid} 
+\begin{verbatim}
+http://www.ire.pw.edu.pl/~rsulej/NetMaker
+\end{verbatim}
+
+\bibitem{icarus_eg} ``Experimental search for the LSND anomaly with the ICARUS
+detector in the CNGS neutrino beam'', ICARUS Collaboration, Eur. Phys. J. C (2013) 73:2345.
+
+\bibitem{argoneut_eg} "Results from and Status of ArgoNeuT
+and MicroBooNE" by A. Szelc. conference: http://neutrino2014.bu.edu/.
+
 \end{thebibliography}
