more text changes

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -11,9 +11,11 @@
 % \bibitem{montanari_35ton_perf} Performance And Results of the LBNE 35 ton Membrane Cryostat Prototype
 % \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25–ICMC 2014, LBNE Docid 9270} 
 
-\bibitem{ICARUS1} "Design, construction and tests of the ICARUS T600 detector", ICARUS Collaboration, Nucl. Inst. Meth., A527 (2004) 329-410. 
+\bibitem{dunecdr} DUNE CDR.
 
-\bibitem{ICARUS2} "Performance of a liquid argon time projection chamber exposed to the CERN West Area Neutrino Facility neutrino beam", F. Arneodo et al. (ICARUS-Milano Collaboration) - Physical Review D (2006) (Vol. 74, No. 112001). 
+\bibitem{icarus_mainref} "Design, construction and tests of the ICARUS T600 detector", ICARUS Collaboration, Nucl. Inst. Meth., A527 (2004) 329-410. 
+%\bibitem{ICARUS2} 
+"Performance of a liquid argon time projection chamber exposed to the CERN West Area Neutrino Facility neutrino beam", F. Arneodo et al. (ICARUS-Milano Collaboration) - Physical Review D (2006) (Vol. 74, No. 112001). 
 
 \bibitem{argoneut1} ``First Measurements of Inclusive Muon Neutrino Charged Current Differential Cross Sections on Argon." C. Anderson et al, Physical Review Letters (PRL) 108 (2012), 161802. 
 \bibitem{argoneut2} "The ArgoNeuT Detector in the NuMI Low-Energy beam line at Fermilab" C. Anderson et al, Journal of Instrumentation (JINST), 2012 JINST Vol. 7 P10019. 
