--- a/introduction.tex
+++ b/introduction.tex
@@ -2,27 +2,28 @@
 
 
 
-The preponderance of matter over antimatter in the early Universe, the dynamics of the supernova bursts that produced the heavy elements necessary for life and whether protons eventually decay - these mysteries at the forefront of particle physics and astrophysics are key to understanding the early evolution of our Universe, its current state and its eventual fate. The Experiment at the Long-Baseline Neutrino Facility (ELBNF) represents an extensively developed plan for a world-class experiment dedicated to addressing these questions.
+The preponderance of matter over antimatter in the early Universe, the dynamics of the supernova bursts that produced the heavy elements necessary for life and whether protons eventually decay - these mysteries at the forefront of particle physics and astrophysics are key to understanding the early evolution of our Universe, its current state and its eventual fate. The Deep Underground Neutrino Experiment (DUNE)
+in combination with the Long-Baseline Neutrino Facility (LBNF) represent an extensively developed plan for a world-class experiment dedicated to addressing these questions.
 
-Experiments carried out over the past half century have revealed that neutrinos are found in three states, or flavors, and can transform from one flavor into another. These results indicate that each neutrino flavor state is a mixture of three different nonzero mass states, and to date offer the most compelling evidence for physics beyond the Standard Model. In a single experiment, ELBNF will enable a broad exploration of the three-flavor model of neutrino physics with unprecedented detail. Chief among its potential discoveries is that of matter-antimatter asymmetries (through the mechanism of charge-parity violation) in neutrino flavor mixing - a step toward unraveling the mystery of matter generation in the early Universe. Independently, determination of the unknown neutrino mass ordering and precise measurement of neutrino mixing parameters by ELBNF may reveal new fundamental symmetries of Nature.
+Experiments carried out over the past half century have revealed that neutrinos are found in three states, or flavors, and can transform from one flavor into another. These results indicate that each neutrino flavor state is a mixture of three different nonzero mass states, and to date offer the most compelling evidence for physics beyond the Standard Model. In a single experiment, DUNE will enable a broad exploration of the three-flavor model of neutrino physics with unprecedented detail. Chief among its potential discoveries is that of matter-antimatter asymmetries (through the mechanism of charge-parity violation) in neutrino flavor mixing - a step toward unraveling the mystery of matter generation in the early Universe. Independently, determination of the unknown neutrino mass ordering and precise measurement of neutrino mixing parameters by DUNE may reveal new fundamental symmetries of Nature.
 
-Grand Unified Theories, which attempt to describe the unification of the known forces, predict rates for proton decay that cover a range directly accessible with the next generation of large underground detectors such as the ELBNF detector. The experiment's sensitivity to key proton decay channels will offer unique opportunities for the ground-breaking discovery of this phenomenon.
+Grand Unified Theories, which attempt to describe the unification of the known forces, predict rates for proton decay that cover a range directly accessible with the next generation of large underground detectors such as the DUNE detector. The experiment's sensitivity to key proton decay channels will offer unique opportunities for the ground-breaking discovery of this phenomenon.
 
-Neutrinos emitted in the first few seconds of a core-collapse supernova carry with them the potential for great insight into the evolution of the Universe. ELBNF's capability to collect and analyze this high-statistics neutrino signal from a supernova within our galaxy would provide a rare opportunity to peer inside a newly-formed neutron star and potentially witness the birth of a black hole.
+Neutrinos emitted in the first few seconds of a core-collapse supernova carry with them the potential for great insight into the evolution of the Universe. DUNE's capability to collect and analyze this high-statistics neutrino signal from a supernova within our galaxy would provide a rare opportunity to peer inside a newly-formed neutron star and potentially witness the birth of a black hole.
 
-To achieve its goals, ELBNF is centered around three central components: (1) a new, high-intensity neutrino source generated from a megawatt-class proton accelerator at Fermi National Accelerator Laboratory (Fermilab), (2) a fine-grained near neutrino detector installed just downstream of the source, and (3) a massive liquid argon (LAr) time-projection chamber (TPC) deployed as a far detector deep underground at the Sanford Underground Research Facility (SURF). This facility, located at the site of the former Homestake Mine in Lead, South Dakota, is $\sim$1,300 km from the neutrino source at Fermilab - a distance (baseline) that delivers optimal sensitivity to neutrino charge-parity symmetry violation and mass ordering effects. This ambitious yet cost-effective design incorporates scalability and flexibility and can accommodate a variety of upgrades and contributions.
+To achieve its goals, DUNE and LBNF are centered around three central components: (1) a new, high-intensity neutrino source generated from a megawatt-class proton accelerator at Fermi National Accelerator Laboratory (Fermilab), (2) a fine-grained near neutrino detector installed just downstream of the source, and (3) a massive liquid argon (LAr) time-projection chamber (TPC) deployed as a far detector deep underground at the Sanford Underground Research Facility (SURF). This facility, located at the site of the former Homestake Mine in Lead, South Dakota, is $\sim$1,300 km from the neutrino source at Fermilab - a distance (baseline) that delivers optimal sensitivity to neutrino charge-parity symmetry violation and mass ordering effects. This ambitious yet cost-effective design incorporates scalability and flexibility and can accommodate a variety of upgrades and contributions.
 
-ELBNF plans to place modular LAr TPCs with a combined total fiducal mass of at least  40 kton in the underground facility at Homestake and into the neutrino beam.
+DUNE plans to place modular LAr TPCs with a combined total fiducal mass of at least  40 kton in the underground facility at Homestake and into the neutrino beam.
 The first 10~kton LAr TPC module is planned to be constructed underground on the time scale of 2021.
 
-With its exceptional combination of experimental configuration, technical capabilities, and potential for transformative discoveries, ELBNF promises to be a vital facility for the field of particle physics worldwide, providing physicists from institutions around the globe with opportunities to collaborate in a twenty to thirty year program of exciting science.
+With its exceptional combination of experimental configuration, technical capabilities, and potential for transformative discoveries, DUNE promises to be a vital facility for the field of particle physics worldwide, providing physicists from institutions around the globe with opportunities to collaborate in a twenty to thirty year program of exciting science.
 
 
 
-\subsection{Key physics goals of ELBNF}
+\subsection{Key physics goals of DUNE}
 
 
-The primary goal of ELBNF  is to measure the appearance of electron neutrinos in a beam of muon neutrinos and 
+The primary goal of DUNE  is to measure the appearance of electron neutrinos in a beam of muon neutrinos and 
 and the appearance of electron anti-neutrinos in a beam of muon anti-neutrinos, each
  over the 1300~km baseline of the experiment. Precise measurement of this
 phenomenon would allow for determination of the relative masses and mass ordering of the three
@@ -34,7 +35,7 @@ For a baseline of 1300~km the first maximum of the oscillation probability occur
 oscillation maxima at lower energies. Hence the high intensity neutrino flux must be peaked in this energy range. Coverage of the 
 sub GeV energy range is desirable to potentially map out the second maximum in the oscillation probability.
 It is this key physics which dictates the neutrino energy range and thereby the energy range of charged particles which result from neutrino 
-interactions in the ELBNF detectors. 
+interactions in the DUNE detectors. 
 
 
 \subsection{Single-phase LAr detector}
@@ -48,16 +49,43 @@ The LAr detector design is characterized by a modular approach in which the LAr 
 
 \subsection{Goals for the prototype detector and beam test}
 
-The physics sensitivity of ELBNF has been estimated based on detector performance characteristics published in the literature, simulation based estimates
-as well as a variety of assumptions about the anticipated performance of the future detector and event reconstruction and particle identification algorithms.
-The proposed single phase LAr prototype detector and CERN beam test aim to replace these assumptions with measurements for the full scale ELBNF detector 
-components and the presently available algorithms. Thereby the measurements will allow to enhance the accuracy and reliability of the ELBNF physics sensitivity 
-projections. The beam measurements will serve as a calibration data set to tune the Monte Carlo simulations and serve as a reference data set for measurements of the 
-future ELBNF detector. In addition, the measurement program aims to evaluate and benchmark the performance of the detector and its individual components.
-This will allow to identify potentially problematic components and lead to future improvements and optimizations of the detector design.
+
+
+The CERN single-phase prototype detector is a crucial milestone towards construction and operation of the 
+first 10~kton DUNE far detector module. The prototype detector and beam test serves two principal functions. 
+The first is to serve as an engineering prototype to validate the performance of all detector components,
+establish and commission production sites and to test the installation procedure. 
+The second is to collect and study physics data in response to charged particles of different type and energy. 
+Results from these measurements serve to validate MC simulations, serve as data input to sensitivity studies 
+of the DUNE experiment  and allow to validate and tune event reconstruction and particle identification tools.\\
+To mitigate the risks associated with extrapolating small scale versions of the single-phase LAr TPC technology 
+to a full-scale detector element, it is essential to benchmark the operation of full-scale detector elements
+and perform measurements in a well characterized charged particle beam.  
+
+Many basic detector performance parameters can be established with cosmic ray muons and the results are critical to inform 
+the production of the first 10~kton DUNE far detector components.
+It allows to identify potentially problematic components and lead to future improvements and optimizations of the detector design.
+However, a well defined charged particle test beam will significantly enhance the detector performance measurements.
+In particular, the following checks are anticipated:
+\begin{enumerate}
+ \item characterize performance of full scale TPC module
+ \item study performance of the photon detection system
+ \item test and evaluate the performance of detector calibration tools (e.g. laser system)
+  \item verify functionality of cold TPC electronics under LAr cryogenic conditions
+  \item perform full-scale structural test under LAr cryogenic conditions
+  \item verify argon contamination levels and associated mitigation procedures
+  \item develop and test installation procedures for full-scale detector components
+  \item identify flaws and inefficiencies in the manufacturing process
+\end{enumerate}
+
+The physics sensitivity of the DUNE experiment has been estimated based on detector performance characteristics published in the literature, simulation based estimates as well as a variety of assumptions about the anticipated performance of the future detector and event reconstruction and particle identification algorithms.
+The proposed single-phase LAr prototype detector and CERN beam test aim to replace these assumptions with measurements for the full scale DUNE detector components and the presently available algorithms. Thereby the measurements will allow to enhance the accuracy and reliability of the DUNE physics sensitivity projections. 
+The beam measurements will serve as a calibration data set to tune the Monte Carlo simulations and serve as a reference data set for measurements of the future DUNE detector. \\
+%
 
 In order to make such precise measurements, the detector will need to accurately identify and measure the energy of the particles produced in the neutrino interaction with Argon which will range from hundreds of MeV to several GeV.
-To mitigate the risks associated with extrapolating small scale versions of the single-phase LAr TPC technology to a full-scale detector element, it is essential to benchmark the operation of a full-scale detector elements in a well characterized charged particle beam.  
+
+
 
 More specifically, the goals of the prototype detector and beam test measurements include the
 the use of a charged particle beam to:
@@ -83,28 +111,39 @@ the use of a charged particle beam to:
  \end{enumerate}
 \end{enumerate}
 
-For the detector performance characterization a well defined charged particle test beam will 
-enable the following detector performance measurements:
-
-\begin{enumerate}
- \item characterize performance of full scale TPC module
- \item verify functionality of cold TPC electronics under LAr cryogenic conditions
- \item perform full-scale structural test under LAr cryogenic conditions
- \item study performance of the photon detection system
- \item verify argon contamination levels and associated mitigation procedures
- \item develop and test installation procedures for full-scale detector components
- \item test and evaluate the performance of detector calibration tools
-\end{enumerate}
-
-
 The CERN charged particle beam lines provide an opportunity to perform this crucial test of the 
-proposed single-phase LAr TPC and thereby inform the decision regarding the far detector design and layout for ELBNF.
+proposed single-phase LAr TPC and thereby inform the decision regarding the far detector design and layout for DUNE.
 In order to be of greatest value to this decision making process results should be available as soon as possible.
 
-This technical document describes the motivation and technical details for an initial  measurement program that we propose to be executed by mid 2018, 
-that is {\it before} the anticipated LHC long shutdown. The estimated required beam time amounts to $\sim$ XX weeks of data collection. 
+
+A detailed estimate enumerating the desired minimum integrated particle counts as a function
+of charged particle species and momentum is nearing completion. This estimate is also converted 
+into a run plan based on realistic beam composition, particle energies and efficiency information. 
+
+The goal is to take a first beam data run in 2018 before the long shutdown of the LHC. 
+The requested beam time has been estimated and amounts to {\color{red} $\sim$ XX weeks} of data collection. 
+Experiences gained from construction, installation and commissioning of the CERN single-phase prototype detector 
+as well as performance tests with cosmic ray data are expected to lead to an optimization of equivalent phases 
+for the DUNE far detector. 
+Additional follow-up measurements with potentially modified detector components form a potential future extension 
+to the proposed program.\\
+
+The present document describes the motivation and technical details of the proposed detector. Section \ref{detbeamtest} describes the scientific motivation and the planned program of measurements. The layout of the single phase liquid argon detector and technical details of the detector components are specified in section \ref{singlephasedet}. In section \ref{cryo} we provide information on the proposed cryostat which houses the detector as well as on the required cryogenics system. Section \ref{calibration} introduces our approach to calibrating the detector and the 
+required tools. We describe the requirements for the charged particle beam and a draft run plan in section \ref{testbeamreq}.
+In section \ref{computing} we estimate computing and data handling needs before describing the installation procedure for the detector
+and the interface to the CERN nu-platform in section \ref{nuplatform}. Schedule and organization are presented in section \ref{organ} before
+ending with some concluding remarks in section \ref{summary}.
+
+
+
+
+
+
+
 %
-Additional follow-up measurements with potentially modified detector components form a potential extension to the proposed program.
+
+
+
 
 
 
