--- a/introduction.tex
+++ b/introduction.tex
@@ -128,11 +128,11 @@ for the DUNE far detector.
 Additional follow-up measurements with potentially modified detector components form a potential future extension 
 to the proposed program.\\
 
-The present document describes the motivation and technical details of the proposed detector. Section \ref{detbeamtest} describes the scientific motivation and the planned program of measurements. The layout of the single phase liquid argon detector and technical details of the detector components are specified in section \ref{singlephasedet}. In section \ref{cryo} we provide information on the proposed cryostat which houses the detector as well as on the required cryogenics system. Section \ref{calibration} introduces our approach to calibrating the detector and the 
-required tools. We describe the requirements for the charged particle beam and a draft run plan in section \ref{testbeamreq}.
-In section \ref{computing} we estimate computing and data handling needs before describing the installation procedure for the detector
-and the interface to the CERN nu-platform in section \ref{nuplatform}. Schedule and organization are presented in section \ref{organ} before
-ending with some concluding remarks in section \ref{summary}.
+The present document describes the motivation and technical details of the proposed detector. Section~\ref{detbeamtest} describes the scientific motivation and the planned program of measurements. The layout of the single phase liquid argon detector and technical details of the detector components are specified in section~\ref{singlephasedet}. In section~\ref{cryo} we provide information on the proposed cryostat which houses the detector as well as on the required cryogenics system. Section~\ref{calibration} introduces our approach to calibrating the detector and the 
+required tools. We describe the requirements for the charged particle beam and a draft run plan in section~\ref{testbeamreq}.
+In section~\ref{computing} we estimate computing and data handling needs before describing the installation procedure for the detector
+and the interface to the CERN nu-platform in section~\ref{nuplatform}. Schedule and organization are presented in section~\ref{organ} before
+ending with some concluding remarks in section~\ref{summary}.
 
 
 
