--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -1,7 +1,7 @@
 
 \subsection{Particle Beam Requirements}
 The requested beam parameters are driven by the requirement that the results from the CERN test beam should be directly applicable to the future large underground single-phase LAr detector with minimal extrapolation. The CERN test beam data will be used to evaluate the detector performance, to understand the various physics systematic effects, and to provide ``neutrino-like'' data for event reconstruction studies. To satisfy the requirement, the beam parameters must span a broad range of particle spectrum that are expected in the future neutrino experiment. The particle beam composition should consist of electrons, muons, and hadron beams that are charge-selected. The expected momentum distributions for secondary particles from neutrino interactions are shown earlier in Figure~\ref{fig:particle_momenta}. There is a large spread in the momentum distribution with most particles peaked near 200 MeV/c. To cover the momentum range of interest, the momentum of the test beam should step from 0.2 GeV/c to 7 GeV/c. The maximum electron drift time in the TPC is about 2.2 ms. To minimize pile-up in the TPC, the desired beam rate should be around 200 Hz. The single-phase TPC consists of two drift volumes. It is desirable to aim the particle beam so that the hadronic showers are mostly contained in the same drift volume.  However, we also plan to take some data with the beam entering different region of the TPC, and may include some data with particles crossing one drift volume to the next. %The two beam entry angles and positions with respect to the LAr cryostat are shown in Figures \ref{fig:BP_SideView} and \ref{fig:BP_TopView}. 
-The beam nominally enters the cryostat slightly downward at an angle of about 6 degrees. Along the horizontal plane, the beam enters the cryostat with an angle of 10 degrees. The summary of the beam requirements are shown in Table~\ref{table:beamspecs}.
+The beam nominally enters the cryostat slightly downward at an angle of about 6 degrees. The 6 degrees angle is roughly the angle at which the neutrino beam enters the liquid argon cryostat at the far detector for the DUNE experiment. Along the horizontal plane, the beam enters the cryostat with an angle of about 10 degrees to avoid pointing the beam perpendicular to the electron drift in the TPC. The summary of the beam requirements are shown in Table~\ref{table:beamspecs}.
 
 %\begin{figure}[h]
 %  \centering
@@ -13,7 +13,7 @@ The beam nominally enters the cryostat slightly downward at an angle of about 6 
 %\begin{figure}[h]
 %  \centering
 %\includegraphics[scale=0.6]{figures/BeamPos_TopView.pdf}
-%  \caption{Top view: beam enters the cryostat with an entry angle of about 10 degrees along the horizontal plane. The primary orientation sends the particle beam into one TPC drift volume. The secondary oritentation sends the particle beam across the APA. }
+%  \caption{Top view: beam enters the cryostat with an entry angle of about 10 degrees along the horizontal plane. The primary orientation sends the particle beam into one TPC drift volume. The secondary orientation sends the particle beam across the APA. }
 %  \label{fig:BP_TopView}
 %\end{figure}
 
@@ -22,16 +22,17 @@ The beam nominally enters the cryostat slightly downward at an angle of about 6 
 \begin{tabular}{|c|c|}
 \hline
 \textbf{Parameter } & \textbf{Requirements}  \\ \hline
-  Particle Types        & $e^\pm,\mu^\pm,\pi^\pm$  \\ \hline
-  Momentum Range   & 0.2 - 7 GeV/$c$ \\ \hline
-  Momentum Spread   & $\Delta p/p  < $5 \%   \\ \hline
+  Particle Types        & $e^\pm,\mu^\pm,\pi^\pm$,$K$,$p$  \\ \hline
+  Momentum Range   & 0.2 - 10 GeV/$c$ \\ \hline
+  Momentum Spread   & $\Delta p/p  < $5 \% \\
+  & (limited by the aperture of the magnets)  \\ \hline
   Transverse Beam Size   & RMS(x,y) $\approx$ 10 cm  \\
   & (At the entrance face of the LAr cryostat) \\ \hline
   Beam Divergence & tbd   \\ \hline
-  Beam Angle &  $\approx10^{\circ}$    \\
-  (horizontal plane) &  \\ \hline
-  Beam Dip Angle &  -6$^\circ$ (nominal); $\pm5^\circ$ range    \\ 
-  (vertical plane) &  \\ \hline
+  Beam Angle &  $\approx$10$^{\circ}$ \\
+  (horizontal plane) &  (w.r.t. the long axis of the cryostat)\\ \hline
+  Beam Dip Angle &  $\approx$6$^\circ$ (downward)   \\ 
+  (vertical plane) & (w.r.t. the longitudinal beam axis) \\ \hline
   Beam Entrance Position & Multiple beam windows    \\ \hline
   Rates & 200 Hz (maximum)    \\ \hline
 \end{tabular}
@@ -45,7 +46,7 @@ The H4ext is an extension of the existing H4 beamline in Experimental Hall North
 \begin{figure}[h]
   \centering
 \includegraphics[scale=0.7]{figures/EHN1Ext_Prelim.jpg}
-  \caption{A conceptual layout of the H4ext beamline  }
+  \caption{A conceptual layout of the H4ext beamline. The liquid argon cryostat for this proposal is the box with a red cross in the lower right corner.  }
   \label{fig:H4extPrelim}
 \end{figure}
 
@@ -56,10 +57,10 @@ The H4ext is an extension of the existing H4 beamline in Experimental Hall North
 Beam instrumentation provides important information about the characteristics of the beam. It is expected that a series of detectors will be installed along the beam line to measure the particle momentum, identify particle type, and track the particle trajectory.
 
 \subsubsection{Beam Position Detector}
-The beam position detector measures the positions of the particle as it traverses the detector. Two detector technologies are under considerations: wire chambers and scintillating fiber trackers. For the nominal setup, one beam position detector is installed upstream and another one downstream of the last bending magnet. This pair provides additional momentum information about the particiles as well as the first set of position measurements. A third detector is placed right in front of the beam window on the cryostat wall to provide the last position information before the beam enters the cryostat.
+The beam position detector measures the positions of the particle as it traverses the detector. Two detector technologies are under considerations: wire chambers and scintillating fiber trackers. For the nominal setup, one beam position detector is installed upstream and another one downstream of the last bending magnet. This pair provides additional momentum information about the particles as well as the first set of position measurements. Without tracking information, the momentum spread of the beam is expected to be at around 5\% based on the acceptance of the dipole magnets. With additional tracking information, we are likely to be able to measure the momentum of the individual particles to close to one percent level. A third beam position detector is placed right in front of the beam window on the cryostat wall to provide the last position information before the beam enters the cryostat.
 
 \subsubsection{Particle Identification}
-In order to have good particle identification over large momentum range, two indepent particle identfication systems are needed in the beamline. The Time-of-Flight system will be used to cover lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles.
+In order to have good particle identification over large momentum range, two independent particle identification systems are needed in the beamline. The Time-of-Flight system will be used to cover lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles.
 
 \subsubsection{Muon Beam Halo Counters}
 The halo counter is a set of plastic scintillator paddles surrounding the beamline. The main purpose is to tag particles (primarily muons from the upstream production target) that are outside of the beam axis, but may potentially enter the TPC volume. The counter information is used to either veto or simply flag these class of events.
@@ -78,7 +79,7 @@ At the time of this proposal, the beamline design has not been finalized. To est
 \label{fig:PionOnCuTarget}
 \end{figure}
 
-To formulate a preliminary beam time request, we assume the hadron beam rates and spectrum as given in Figure~\ref{fig:PionOnCuTarget} with some assumptions about efficiencies and acceptances. For the electron sample, we expect a different optimized beamline setup to produce a pure electron beam with a flux of about 200 Hz. A preliminary run plan is shown in Table~\ref{tab:RunPlan}. The number of spills needed for each momentum bin is driven by the samples highlighted in red or by the requirement that we collect at least 150 spills ($\approx$ 2 hours of beam time) per momentum bin . This proposed plan satifies the requested samples as listed in Table~\ref{tab:runsum}, except for Kaons less than 1 GeV. Most low momentum Kaons produced from the secondary target decay before reaching the liquid argon cryostat. To obtain those samples, we will need to carry out extended runs and trigger exclusively on particles tagged as Kaons by either the time-of-flight or the threshold Cherenkov counters.
+To formulate a preliminary beam time request, we assume the hadron beam rates and spectrum as given in Figure~\ref{fig:PionOnCuTarget}. For the beam rate estimates, we account for particle lifetimes assuming the distance from the secondary target to the cryostat to be 30 m and the data taking efficiency to be about 50\%. For the electron sample, we expect a different optimized beamline setup to produce a pure electron beam with a flux of about 200 Hz. A preliminary run plan for one configuration is shown in Table~\ref{tab:RunPlan}. The number of spills needed for each momentum bin is driven by the samples highlighted in red or by the requirement that we collect at least 150 spills ($\approx$ 2 hours of beam time) per momentum bin . This proposed plan satisfies the requested samples as listed in Table~\ref{tab:runsum}, except for Kaons less than 1 GeV. Most low momentum Kaons produced from the secondary target decay before reaching the liquid argon cryostat. To obtain those samples, we will need to carry out extended runs and trigger exclusively on particles tagged as Kaons by either the time-of-flight or the threshold Cherenkov counters.
 
 \begin{table}[tb]
 \centering
@@ -126,9 +127,9 @@ To formulate a preliminary beam time request, we assume the hadron beam rates an
 \hiderowcolors
 \multicolumn{3}{|c|}{0.2,0.3,0.4,0.5,0.7,1,2,3,5,7}  & 150 per bin & \multicolumn{2}{|c|}{2 hours per bin} &{140K per bin} \\ \hline
 \end{tabular}
-\caption{A preliminary run plan. The number of spills needed for a given momentum bin is driven by the samples highlighted in red or by the requirement of at least 150 spills per momentum bin.}
+\caption{A preliminary run plan for one beam angle and position. The number of spills needed for a given momentum bin is driven by the samples highlighted in red or by the requirement of at least 150 spills per momentum bin.}
 \label{tab:RunPlan}
 \end{table}
 
-In addition to the above samples with beam at the nominal position, we expect to take some additional data with the beam entering the TPC at different position and angles. Without a detail beamline design, there are still some uncertainties on the actual beam rates. Based on the information that we have, the total estimated beam time needed to carry out the physics program in this proposal is about 4 to 6 weeks.
+In addition to the above samples with beam at the nominal position, we expect to take some additional data with the beam entering the TPC at different position and angles. Without a detail beamline design, there are still some uncertainties on the actual beam rates. Based on the information that we have, the total estimated beam time needed to carry out the physics program (physics samples as listed in Table~\ref{tab:runsum}, multiple angles and beam positions, dedicated Kaon runs, etc) in this proposal is about 4 to 6 weeks.
  
