--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -285,8 +285,10 @@ outgoing particles, especially at low energies, must be checked and bench marked
 large uncertainties from shower modeling. 
 \begin{figure}[h!]
   \centering
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/protons_1gev_v0}
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/protons_3gev_v0}
+%\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/protons_1gev_v0}
+%\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/protons_3gev_v0}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pr1GeV_1}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pr3GeV_1}
 \label{fig:hadronshwr}
   \caption{Fraction of true energy deposited by interacting protons of 1~GeV/c (left) and
 3~GeV/c (right) momenta simulated using FLUKA~\cite{fluka05}.
@@ -541,9 +543,10 @@ signal is much more difficult to distinguish from the CC $\nu_e$ scattering sign
   \centering
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pid}
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pid_probabilities}
-\includegraphics[width=\textwidth,height=10.0cm]{figures/eff-bgdrej-diffen}
+\includegraphics[width=0.49\textwidth,height=6.0cm]{figures/eff-bgdrej-diffen}
+\includegraphics[width=0.49\textwidth,height=6.0cm]{figures/APAT600_all_norm}
 \label{fig:egam}
-  \caption{Background rejection versus signal efficiency for various energies.
+  \caption{(Left)Background rejection versus signal efficiency for various energies.
 {\color{red}
 }
 }
