more figure updates

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -309,13 +309,10 @@ studies.
   \centering
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pi+pi-_means}
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pi+pi-_sig}
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pi+pi-_means}
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pi+pi-_sig}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pipimean}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pipisigma}
   \caption{Differences in mean energy deposited (left) and width of visible energy (right) 
 for interacting $\pi^+$ versus $\pi^-$ ranging from 0.2~GeV/c up to 5~GeV/c. 
-{\color{red}
-Awaiting improved figure
-}
 }
 \label{fig:pionshwr}
 \end{figure}
