--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -1,4 +1,4 @@
-
+\label{testbeamreq}
 \subsection{Particle Beam Requirements}
 The requested beam parameters are driven by the requirement that the results from the CERN test beam should be directly applicable to the future large underground single-phase LAr detector with minimal extrapolation. The CERN test beam data will be used to evaluate the detector performance, to understand the various physics systematic effects, and to provide ``neutrino-like'' data for event reconstruction studies. To satisfy the requirement, the beam parameters must span a broad range of particle spectrum that are expected in the future neutrino experiment. The particle beam composition should consist of electrons, muons, and hadron beams that are charge-selected. The expected momentum distributions for secondary particles from neutrino interactions are shown earlier in Figure~\ref{fig:particle_momenta}. There is a large spread in the momentum distribution with most particles peaked near 200 MeV/c. To cover the momentum range of interest, the momentum of the test beam should step from 0.2 GeV/c to 7 GeV/c. The maximum electron drift time in the TPC is about 2.2 ms. To minimize pile-up in the TPC, the desired beam rate should be around 200 Hz. The single-phase TPC consists of two drift volumes. It is desirable to aim the particle beam so that the hadronic showers are mostly contained in the same drift volume.  However, we also plan to take some data with the beam entering different region of the TPC, and may include some data with particles crossing one drift volume to the next. %The two beam entry angles and positions with respect to the LAr cryostat are shown in Figures \ref{fig:BP_SideView} and \ref{fig:BP_TopView}. 
 The beam nominally enters the cryostat slightly downward at an angle of about 6 degrees. Along the horizontal plane, the beam enters the cryostat with an angle of 10 degrees. The summary of the beam requirements are shown in Table~\ref{table:beamspecs}.
